modify index html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@ layout: default
 <div id="featured">
 	<div class="container">
 		<header>
-			<h2>Welcome to Linear</h2>
+			<h2>不如吃茶去</h2>
 		</header>
-		<p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
+		<p align="left">&nbsp;&nbsp;&nbsp;&nbsp;据典传，有僧人问雪峰义存禅师：“古人道，路逢达道人，不将语默对，未审将甚么对?” 禅师答曰：“ 吃茶去。”</p>
+		<p align="left">&nbsp;&nbsp;&nbsp;&nbsp;又据传，有唐代高僧从念禅师，人称赵州和尚，每次话前总要说“ 吃茶去 ”，有两位僧人至赵州和尚处，和尚问其中一位：“新近曾到此间么？”，答 “ 曾 ”，和尚曰：“吃茶去！”。和尚又问另一位僧人：“新近曾到此间么？”，答“不曾！”，和尚还是曰：“吃茶去！”。</p>
+		<p align="left">&nbsp;&nbsp;&nbsp;&nbsp;白居易为官时，曾访道于鸟巢禅师，见禅师坐于树上，居易曰：“我来问道。” 鸟巢曰：“诸恶莫作，众善奉行。” 居易曰：“三岁小儿都知道。” 鸟巢曰：“八十老翁行不得。”</p>
+
 		<hr />
 		<div class="row">
 			<section class="4u">
